# python-fsps

./: .cirrus.yml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.Makefile  .travis.yml  AUTHORS.rst  CMakeLists.txt  LICENSE.rst  MANIFEST.in  Makefile  README.md  README.rst  colors.py  index.html  meson.build  metadata.yaml  noxfile.py  objects.inv  paper.md  paper.tex  pyproject.toml  requirements.txt  searchindex.js  setup.py  weisz.py
.github/workflows/: Makefile  build_docs.sh  install_fsps.sh  joss.yml  release.yml  tests.yml  update-fsps.yml
0.1.0/: index.html  objects.inv  searchindex.js
0.1.0/README/: index.html
0.1.0/_sources/: installation.txt
0.1.0/filter_table/: index.html
0.1.0/filters/: index.html
0.1.0/filters_api/: index.html
0.1.0/genindex/: index.html
0.1.0/installation/: index.html
0.1.0/search/: index.html
0.1.0/stellarpop_api/: index.html
0.1.2.dev187+ge015df2/_sources/: index.rst.txt
0.1.2.dev187+ge015df2/installation/: index.html
0.1.2.dev187+ge015df2/stellarpop_api/: index.html
0.2.0/: objects.inv  searchindex.js
0.2.0/README/: index.html
0.2.0/filter_table/: index.html
0.2.0/filters/: index.html
0.2.0/filters_api/: index.html
0.2.0/genindex/: index.html
0.2.0/stellarpop_api/: index.html
0.2.1/: index.html  searchindex.js
0.2.1/_sources/: index.txt  installation.txt
0.2.1/genindex/: index.html
0.2.1/installation/: index.html
0.2.1/search/: index.html
0.2.1/stellarpop_api/: index.html
0.2.2/: index.html  objects.inv  searchindex.js
0.2.2/README/: index.html
0.2.2/filter_table/: index.html
0.2.2/filters/: index.html
0.2.2/filters_api/: index.html
0.2.2/genindex/: index.html
0.2.2/installation/: index.html
0.2.2/stellarpop_api/: index.html
0.3.0/: index.html  objects.inv  searchindex.js
0.3.0/README/: index.html
0.3.0/_sources/: README.txt  filter_table.rst.txt  filters.txt  installation.txt  stellarpop_api.rst.txt
0.3.0/_static/: flasky.css
0.3.0/filter_table/: index.html
0.3.0/filters/: index.html
0.3.0/filters_api/: index.html
0.3.0/genindex/: index.html
0.3.0/installation/: index.html
0.3.0/search/: index.html
0.3.0/stellarpop_api/: index.html
0.3.0rc1/_sources/: installation.rst.txt
0.3.0rc1/filter_table/: index.html
0.3.1/: index.html  objects.inv  searchindex.js
0.3.1/README/: index.html
0.3.1/filter_table/: index.html
0.3.1/filters/: index.html
0.3.1/filters_api/: index.html
0.3.1/genindex/: index.html
0.3.1/installation/: index.html
0.3.1/search/: index.html
0.3.1/stellarpop_api/: index.html
0.4.0/: objects.inv
0.4.0rc1/: index.html  searchindex.js
0.4.0rc1/_sources/: stellarpop_api.rst.txt
0.4.0rc1/genindex/: index.html
0.4.1/README/: index.html
0.4.1/_sources/: installation.rst.txt
0.4.1/filters_api/: index.html
0.4.1/genindex/: index.html
0.4.1rc1/filters/: index.html
0.4.2/README/: index.html
0.4.2/_sources/: filters_api.rst.txt
0.4.2/filters_api/: index.html
0.4.2/genindex/: index.html
0.4.2/installation/: index.html
0.4.2/search/: index.html
0.4.2rc1/: index.html  searchindex.js
0.4.2rc1/filter_table/: index.html
0.4.2rc1/filters/: index.html
0.4.2rc1/stellarpop_api/: index.html
0.4.3/: index.html
0.4.3/_sources/: installation.rst.txt
0.4.3/filter_table/: index.html
0.4.3/filters/: index.html
0.4.3/filters_api/: index.html
0.4.3/genindex/: index.html
0.4.3/installation/: index.html
0.4.3rc1/: searchindex.js
0.4.3rc1/README/: index.html
0.4.3rc1/search/: index.html
0.4.3rc1/stellarpop_api/: index.html
_sources/: index.txt
demos/: dao69.py  feature_demo.py  plot_sdss_2mass_transmission.py  specbymass.py
docs/: Makefile  README.rst  conf.py  filter_table.rst  index.rst  installation.rst  stellarpop_api.rst
docs/_templates/: sidebarintro.html  sidebarlogo.html
docs/_themes/: LICENSE
docs/_themes/dfm/: layout.html  localtoc.html
docs/_themes/dfm/static/: flasky.css_t
figures/: figure.py
fsps/: Makefile  __init__.py  filters.py  fsps.f90  fsps.f95  fsps.py  make_fig37.py  test_mdf.py  test_sps.py  tests.py
fsps/data/: filter_keys.txt
genindex/: index.html
joss/: paper.bib  paper.md
joss/figures/: figure.py
latest/: index.html  objects.inv  searchindex.js
latest/README/: index.html
latest/_sources/: index.rst.txt
latest/filter_table/: index.html
latest/filters/: index.html
latest/filters_api/: index.html
latest/genindex/: index.html
latest/installation/: index.html
latest/search/: index.html
latest/stellarpop_api/: index.html
pyfsps/: Makefile
scripts/: fsps_filter_table.py
search/: index.html
src/fsps/: CMakeLists.txt  __init__.py  filters.py  fsps.f90  fsps.py  meson.build  sps_home.py
tests/: options.py  simple.py  simple_test_script.py  tests.py
tools/: dist.py  f2py_include.py  version.py
