[project]
name = "fsps"
description = "Python bindings for Charlie Conroy's FSPS"
authors = [{ name = "Dan Foreman-Mackey", email = "foreman.mackey@gmail.com" }]
readme = "README.rst"
requires-python = ">=3.9"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest", "pytest-xdist"]

[project.urls]
"Homepage" = "https://dfm.io/python-fsps"
"Source" = "https://github.com/dfm/python-fsps"
"Bug Tracker" = "https://github.com/dfm/python-fsps/issues"

[build-system]
requires = ["scikit-build-core", "oldest-supported-numpy"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
ninja.minimum-version = "1.10"
cmake.minimum-version = "3.17.2"
sdist.exclude = ["src/fsps/libfsps"]
sdist.include = [
    "src/fsps/libfsps/src/*.f90",
    "src/fsps/libfsps/LICENSE",
    "src/fsps/libfsps/README",
    "src/fsps/fsps_version.py",
]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
write_to = "src/fsps/fsps_version.py"

[tool.cibuildwheel]
skip = "pp* *-win32 *-musllinux_* *-manylinux_i686"
test-command = "python {project}/tests/simple.py"
environment = { SPS_HOME = "$(pwd)/src/fsps/libfsps" }

[tool.black]
target-version = ["py38", "py39"]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["F", "I", "E", "W", "YTT", "B", "Q", "PLE", "PLR", "PLW"]
ignore = [
    "E402",    # Allow module level imports below top of file
    "E741",    # Allow ambiguous variable names
    "PLW0603", # Allow global statements
    "PLR0912", # Allow many branches
    "PLR0913", # Allow many arguments to function calls
    "PLR2004", # Allow magic numbers
]
exclude = ["demos/*"]

[tool.ruff.isort]
known-first-party = ["fsps"]
